# openpyxl-datautils

./: .gitignore  LICENSE  README.md  excel_range.py  range_class.py  setup.cfg  setup.py
examples/: basic_demo.ipynb
examples/workbooks/: tree_box.xlsx
src/openpyxl_datautils/: __init__.py
src/openpyxl_datautils/__source__/: cell_range.py  range_class.py  workbook_utils.py
src/tests/: cell_range_tests.py
tests/: dev-testing.ipynb
tests/workbooks/: merge_example.xlsx
