[metadata]
name = openpyxl-datautils
version = attr: openpyxl_datautils.__version__
author = Robby Medich
author_email = robbymedich@gmail.com
description = Create a wrapper around openpyxl to make working with cell ranges and dataframes easier
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/robbymedich/openpyxl-datautils
project_urls =
    Bug Tracker = https://github.com/robbymedich/openpyxl-datautils/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords = Excel, OpenPyXL, Pandas, Cell, Range, Data

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >= 3.6, <4
install_requires =
    openpyxl
    lxml
    pandas

[options.packages.find]
where = src
